# Prax

./: .gitignore  .hlint.yaml  README.md  prax.cabal
.github/workflows/: verify.yml
app/: Main.hs
conformance/: ADJUDICATED.json  HASKELL_PINS.txt  KILLED.md  README.md
conformance/fixtures/: cg1_supersession.json  db.json  derive.json  div1.json  el.json  engine.json  kin.json  npc.json  planner.json  query.json
conformance/goldens/: SHA256SUMS  bar-12.txt  intrigue-12.txt  loop-bar-25.txt  village-21.txt
docs/: LEDGER.md  PRINCIPLES.md  WALKTHROUGH.md
docs/plans/: 2026-07-10-v19-witnessing.md  2026-07-10-v20-rumor.md  2026-07-10-v21-repute.md  2026-07-10-v22-deceit.md  2026-07-10-v23-planner-realism.md  2026-07-11-v24-project.md  2026-07-11-v25-persona.md  2026-07-11-v26-planner-work.md  2026-07-11-v27-incremental-view.md  2026-07-12-v28-cooked-world.md  2026-07-12-v29-interning.md  2026-07-12-v30-blackmail-debt.md  2026-07-12-v31-faction-kin.md  2026-07-12-v32-confession.md  2026-07-13-v33-live-relevance.md  2026-07-13-v34-prediction-reuse.md  2026-07-13-v35-intentions.md  2026-07-14-v36-drift.md  2026-07-14-v37-gatherings.md  2026-07-15-v38-chance-feelings.md  2026-07-15-v39-asserted-endpoints.md  2026-07-15-v40-hygienic-variables.md  2026-07-15-v41-one-analysis-surface.md  2026-07-15-v42-dead-condition-lint.md  2026-07-15-v43-hygiene-bundle.md  2026-07-16-v44-the-schedule.md  2026-07-16-v45-protected-families.md  2026-07-17-v46-the-narrator-dies.md  2026-07-17-v47-function-registry.md  2026-07-17-v48-generality-bundle.md  2026-07-17-v49-coercion.md  2026-07-18-v50-machinery-state.md  2026-07-19-v51-lifting.md  2026-07-19-v52-plans-as-part-sets.md  2026-07-19-v53-engine-rule-provenance.md  2026-07-19-v54-coercion-time.md
docs/research/: deon-notes.md  praxis-praxish-notes.md  versu-notes.md
docs/rewrite/: ARCHITECTURE.md  DIVERGENCES.md  PLAN.md  PROGRAM.md
docs/specs/: 2026-07-10-v19-witnessing-design.md  2026-07-10-v20-rumor-design.md  2026-07-10-v21-repute-design.md  2026-07-10-v22-deceit-design.md  2026-07-10-v23-planner-realism-design.md  2026-07-11-v24-project-design.md  2026-07-11-v25-persona-design.md  2026-07-11-v26-planner-work.md  2026-07-11-v27-incremental-view.md  2026-07-12-v28-cooked-world.md  2026-07-12-v29-interning.md  2026-07-12-v30-blackmail-debt.md  2026-07-12-v31-faction-kin.md  2026-07-12-v32-confession.md  2026-07-13-v33-live-relevance.md  2026-07-13-v34-prediction-reuse.md  2026-07-13-v35-intentions.md  2026-07-14-v36-drift.md  2026-07-14-v37-gatherings.md  2026-07-15-v38-chance-feelings.md  2026-07-15-v39-asserted-endpoints.md  2026-07-15-v40-hygienic-variables.md  2026-07-15-v41-one-analysis-surface.md  2026-07-15-v42-dead-condition-lint.md  2026-07-15-v43-hygiene-bundle.md  2026-07-16-v44-the-schedule.md  2026-07-16-v45-protected-families.md  2026-07-16-v46-the-narrator-dies.md  2026-07-17-v47-function-registry.md  2026-07-17-v48-generality-bundle.md  2026-07-17-v49-coercion.md  2026-07-18-v50-machinery-state.md  2026-07-19-v51-lifting.md  2026-07-19-v52-plans-as-part-sets.md  2026-07-19-v53-engine-rule-provenance.md  2026-07-19-v54-coercion-time.md
examples/: play.json
oracle/: TraceMain.hs
rust/: Cargo.toml
rust/conformance/: Cargo.toml
rust/conformance/proptest-regressions/: derive_props.txt  view_invariant.txt
rust/conformance/src/: adjudicated_register.rs  analysis_table_spec.rs  derive_props.rs  engine_deontic.rs  engine_replay.rs  fixtures.rs  gate_scanner.rs  golden_drive.rs  goldens.rs  lib.rs  loop_advance.rs  loop_bar.rs  meta_gate.rs  npc_replay.rs  persist_spec.rs  planner_replay.rs  schedule_rule_spec.rs  schedule_spec.rs  script_json_spec.rs  script_spec.rs  script_supersession.rs  source_sweep.rs  supersession_world.rs  typecheck_spec.rs  unchecked_split_gate.rs  view_invariant.rs  village.rs  village_relevance.rs  witness_templates.rs  zero_unsafe_gate.rs
rust/prax-cli/: Cargo.toml
rust/prax-cli/src/: main.rs
rust/prax-core/: Cargo.toml
rust/prax-core/proptest-regressions/: derive.txt
rust/prax-core/src/: compilepipe.rs  db.rs  derive.rs  el.rs  engine.rs  error.rs  inspect.rs  interner.rs  lib.rs  minds.rs  path.rs  persist.rs  planner.rs  query.rs  relevance.rs  rng.rs  schedule.rs  sight.rs  stress.rs  turn.rs  typecheck.rs  types.rs  vocab_consts.rs
rust/prax-oracle/: Cargo.toml
rust/prax-oracle/src/: baseline_tests.rs  classifier_selftest.rs  classify.rs  compare.rs  diff.rs  drive_frozen.rs  drive_rust.rs  harness_tests.rs  main.rs  matrix.rs  probe.rs  record.rs  register.rs  stress.rs  walk.rs  worlds.rs  worldshape.rs
rust/prax-script/: Cargo.toml
rust/prax-script/src/: compile.rs  json.rs  lib.rs  script.rs
rust/prax-vocab/: Cargo.toml
rust/prax-vocab/src/: arc.rs  beliefs.rs  blackmail.rs  coerce.rs  confession.rs  conversation.rs  core_model.rs  core_practices.rs  debt.rs  deceit.rs  deontic.rs  emotion.rs  faction.rs  kin.rs  lib.rs  minds.rs  persona.rs  project.rs  reactions.rs  repute.rs  rumor.rs  witness.rs
rust/prax-worlds/: Cargo.toml
rust/prax-worlds/src/: audience.rs  bar.rs  feud.rs  intrigue.rs  lib.rs  play.rs  vampire.rs  village.rs
scripts/: die-seed-sweep.sh  extract-golden.py  extract-pins.py  freeze-check.sh  golden-check.sh  perf-table.sh  verify.sh
src/Prax/: Arc.hs  Beliefs.hs  Blackmail.hs  Clock.hs  Coerce.hs  Confession.hs  Conversation.hs  Cooked.hs  Core.hs  Db.hs  Debt.hs  Deceit.hs  Deontic.hs  Derive.hs  Drift.hs  EL.hs  Emotion.hs  Engine.hs  Faction.hs  Inspect.hs  Kin.hs  Loop.hs  Minds.hs  Persist.hs  Persona.hs  Planner.hs  Project.hs  Query.hs  Reactions.hs  Relevance.hs  Repute.hs  Rng.hs  Rumor.hs  Schedule.hs  Script.hs  Sight.hs  Stress.hs  Sym.hs  TypeCheck.hs  Types.hs  (+1 more)
test/: Spec.hs
test/Prax/: AnalysisTableSpec.hs  ArcSpec.hs  BarSpec.hs  BeliefsSpec.hs  BlackmailSpec.hs  ClockSpec.hs  CoerceSpec.hs  ConfessionSpec.hs  ConversationSpec.hs  CookedSpec.hs  CoreSpec.hs  DbSpec.hs  DebtSpec.hs  DeceitSpec.hs  DeonticSpec.hs  DeriveSpec.hs  DirectorSpec.hs  DriftSpec.hs  ELSpec.hs  EmotionSpec.hs  EngineSpec.hs  FeudSpec.hs  (+27 more)
(+3044 files in other folders)
