cabal-version:      3.0
name:               prax
version:            0.1.0.0
synopsis:           A Haskell reimplementation of Versu's Praxis social-simulation engine
description:        Exclusion-logic database, social practices, and utility-driven autonomous
                    agents, reconstructed from the Versu paper (Evans & Short 2014) and the
                    Praxish JavaScript reference. See docs/LEDGER.md.
license:            BSD-3-Clause
author:             ahart
maintainer:         soobtoob@gmail.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall -Wcompat -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >=4.17 && <5
                    , containers
    exposed-modules:  Prax.Db
                      Prax.Query
                      Prax.Types
                      Prax.Engine
                      Prax.Planner
                      Prax.Core
                      Prax.Reactions
                      Prax.Beliefs
                      Prax.Conversation
                      Prax.Arc
                      Prax.Loop
                      Prax.Inspect
                      Prax.Stress
                      Prax.Persist
                      Prax.Worlds.Bar
                      Prax.Worlds.Intrigue

executable prax
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:    base
                    , containers
                    , prax

test-suite prax-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    default-language: Haskell2010
    build-depends:    base
                    , containers
                    , prax
                    , tasty
                    , tasty-hunit
    other-modules:    Prax.DbSpec
                      Prax.QuerySpec
                      Prax.EngineSpec
                      Prax.PlannerSpec
                      Prax.LoopSpec
                      Prax.BarSpec
                      Prax.CoreSpec
                      Prax.ReactionsSpec
                      Prax.BeliefsSpec
                      Prax.ConversationSpec
                      Prax.ArcSpec
                      Prax.IntrigueSpec
                      Prax.StressSpec
                      Prax.PersistSpec
