cabal-version:      3.0
name:               prax
version:            0.1.0.0
synopsis:           A Haskell reimplementation of Versu's Praxis social-simulation engine
description:        Exclusion-logic database, social practices, and utility-driven autonomous
                    agents, reconstructed from the Versu paper (Evans & Short 2014) and the
                    Praxish JavaScript reference. See docs/LEDGER.md.
license:            BSD-3-Clause
author:             ahart
maintainer:         soobtoob@gmail.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall -Wcompat -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints

library
    import:           warnings
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:    base >=4.17 && <5
                    , containers
                    , aeson >=2.0
                    , bytestring
    exposed-modules:  Prax.Db
                      Prax.Query
                      Prax.Types
                      Prax.Cooked
                      Prax.Engine
                      Prax.Planner
                      Prax.Core
                      Prax.Reactions
                      Prax.Deontic
                      Prax.EL
                      Prax.Derive
                      Prax.TypeCheck
                      Prax.Beliefs
                      Prax.Witness
                      Prax.Rumor
                      Prax.Repute
                      Prax.Deceit
                      Prax.Minds
                      Prax.Relevance
                      Prax.Persona
                      Prax.Project
                      Prax.Sight
                      Prax.Conversation
                      Prax.Arc
                      Prax.Loop
                      Prax.Inspect
                      Prax.Stress
                      Prax.Persist
                      Prax.Script
                      Prax.Script.Json
                      Prax.Worlds.Bar
                      Prax.Worlds.Intrigue
                      Prax.Worlds.Play
                      Prax.Worlds.Feud
                      Prax.Worlds.Audience
                      Prax.Worlds.Village

executable prax
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:    base
                    , containers
                    , bytestring
                    , prax

test-suite prax-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    default-language: Haskell2010
    build-depends:    base
                    , containers
                    , bytestring
                    , aeson
                    , prax
                    , tasty
                    , tasty-hunit
    other-modules:    Prax.DbSpec
                      Prax.QuerySpec
                      Prax.CookedSpec
                      Prax.EngineSpec
                      Prax.PlannerSpec
                      Prax.LoopSpec
                      Prax.BarSpec
                      Prax.CoreSpec
                      Prax.ReactionsSpec
                      Prax.DeonticSpec
                      Prax.ELSpec
                      Prax.DeriveSpec
                      Prax.FeudSpec
                      Prax.GoldenDriveSpec
                      Prax.ViewInvariantSpec
                      Prax.TypeCheckSpec
                      Prax.BeliefsSpec
                      Prax.WitnessSpec
                      Prax.RumorSpec
                      Prax.ReputeSpec
                      Prax.DeceitSpec
                      Prax.MindsSpec
                      Prax.PersonaSpec
                      Prax.RelevanceSpec
                      Prax.ProjectSpec
                      Prax.SightSpec
                      Prax.ConversationSpec
                      Prax.ArcSpec
                      Prax.IntrigueSpec
                      Prax.StressSpec
                      Prax.PersistSpec
                      Prax.ScriptSpec
                      Prax.Script.JsonSpec
                      Prax.DirectorSpec
                      Prax.VillageSpec
