# The Rust rewrite workspace (R-series). Lives at rust/ until cut-over, when it
# is promoted to the repo root and the Haskell tree is deleted (docs/rewrite/PLAN.md).
[workspace]
resolver = "3"
members = [
    "prax-core",
    "prax-vocab",
    "prax-script",
    "prax-worlds",
    "prax-cli",
    "prax-oracle",
    "conformance",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["ahart"]

# Pinned once here; each member opts in with `dep = { workspace = true }` as the
# stage that needs it lands. The engine's chosen substrate (PLAN.md, Architecture):
# smallvec (trie children / cooked token vectors), rustc-hash (interner &
# binding maps), thiserror (WorldError construction guards), serde + serde_json
# (the save format and the oracle's JSON surface), proptest (the law suites and
# the incremental==naive view net).
[workspace.dependencies]
smallvec = "1.13"
rustc-hash = "2.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.5"

# The dev/test profile is OPTIMIZED. S7 slice 4 lands the village — the
# mechanism-densest world — whose conformance suite drives several hundred
# depth-2 planner turns over a six-character cast (`VillageSpec` alone shares two
# ~100-step free-play trajectories, exactly as the frozen spec does). Measured:
# unoptimized, `cargo test -p conformance village::` had not finished after 37
# MINUTES; at opt-level 2 it is minutes. `scripts/verify.sh` runs `cargo test`
# without a profile flag, so an unoptimized default would make the program's
# standing gate unusable at exactly the stage that needs it most.
#
# `debug-assertions` stays ON: the planner's reuse-hit counter and the
# `debug_assert`ed reuse==live equality are `cfg(debug_assertions)` and are what
# the flagship proptest checks [S-I4]. Only the code generator changes; nothing
# semantic does.
[profile.dev]
opt-level = 2

# The release profile is the shipped/perf profile (the dev profile above is the
# standing-gate profile that keeps `cargo test` usable). Cross-module inlining
# (fat LTO) and a single codegen unit matter here because the hot path is a tight
# recursive descent split across prax-core modules (db/query/derive/engine) — the
# per-call boundaries the optimizer can only collapse with whole-program view.
# Purely a code-generation change; nothing semantic, and the differential/tests
# run on the dev profile, so this cannot alter an observable record.
[profile.release]
lto = "fat"
codegen-units = 1
