[package]
name = "prax-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "The Prax engine: interner, exclusion-logic DB, closure, query, planner, and turn loop."

[dependencies]
smallvec = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# The test-only naive-closure oracle (derive::naive_closure), asserted equal to
# production in the conformance property suite. Off in shipped builds; the
# conformance crate turns it on.
testkit = []

[dev-dependencies]
proptest = { workspace = true }
