[package]
name = "prax-vocab"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "The durable social vocabulary: pure value-builders (practices, axioms, desires) worlds compose."

[dependencies]
prax-core = { path = "../prax-core" }

[dev-dependencies]
smallvec = { workspace = true }
